[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"


[project]
name = "Pacti-instrumentation"
description = "A package for instrumenting Pacti's APIs and measuring CPU utilization."
authors = [{name = "Pacti developers", email = "info@pacti.org"}]
license = "BSD-3-Clause"
classifiers = [
    "Topic :: Scientific/Engineering"
]
keywords = ["instrumentation", "cpu utilization"]
dynamic = ["version"]
dependencies = [
    "Pacti @ git+https://github.com/pacti-org/pacti.git@5ce142e",
    "ipykernel>=6.22.0",
    "notebook>=6.5.3",
    "p-tqdm>=1.4.0",
    "py-cpuinfo>=9.0.0",
    "ipywidgets>=8.0.6",
    "mypy>=1.2.0",
]

requires-python = ">=3.8, <3.12"

[tool.pdm]
package-dir = "src"
version = { source = "file", path = "src/pacti_instrumentation/__version__.py" }

[tool.pdm.build]
package-dir = "src"
editable-backend = "editables"

[tool.pdm.dev-dependencies]
duty = ["duty>=0.7"]

format = [
    "autoflake>=1.4",
    "black>=21.10b0",
    "isort>=5.10",
]
maintain = [
    "git-changelog>=0.4",
    "urlopen>=1.0.0",
]
quality = [
    "darglint>=1.8",
    "flake8>=5.0.0",
    "flake8-bandit",
    "flake8-black",
    "flake8-bugbear",
    "flake8-builtins",
    "flake8-comprehensions",
    "flake8-docstrings",
    "flake8-pytest-style",
    "flake8-string-format",
    "flake8-tidy-imports",
    "flake8-variables-names",
    "pep8-naming",
    "wps-light",
    "nbqa>=1.6.3",
]
typing = [
    "mypy>=0.910",
    "types-markdown>=3.3",
    "types-toml>=0.10",
]

[tool.black]
line-length = 120


[tool.isort]
line_length = 120
#not_skip = "__init__.py"
multi_line_output = 3
force_single_line = false
balanced_wrapping = true
default_section = "THIRDPARTY"
known_first_party = "pacti"
include_trailing_comma = true
